--- a/ClippyVs2022/Properties/Resources.resx
+++ b/ClippyVs2022/Properties/Resources.resx
@@ -117,16 +117,8 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="110" xml:space="preserve">
-    <value>ClippyVS</value>
-    <comment>Neutral ClippyVS</comment>
-  </data>
-  <data name="112" xml:space="preserve">
-    <value>Clippy is back!</value>
-    <comment>Neutral Clippy Is Back!</comment>
-  </data>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="400" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\SharedFiles\Resources\Package.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="Resources1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Resources1.resx;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
   </data>
 </root>
